  * When reading non-MP3 files, map Remixer to Arranger.  This was already
    happening for MP3s, as well as for remixer relationships pulled from the
    MusicBrainz web service.
  * Add ISRC to recognized tags; unsupported by initkan.
  * Add support for ID3 TDOR frame.
  * Add support for additional tags supported by Picard, such as multi-value
    AlbumArtists tags, work title, musicbrainz_releasetrackid,
    musicbrainz_albumstatus, and musicbrainz_albumtype.
  * Add basic support for total tracks/total discs.  initkan will not write them
    by default, but will read them without warning.
  * Fix bug that caused an error in path inference function.
  * initkan: Fix crash if no musicbrainz ids are present.
  * Change tag inference to set title if the exsting title starts with "Track ".
  * Add MP4 file support.
  * Add support for ID3 TXXX:original date.

<tbd>, kantag v1.2.0
  * Ported from deprecated python_musicbrainz2 to python_musicbrainzngs.  "NGS"
    was a very big change for MusicBrainz, and some kantag APIs needed to change
    drastically as a result.  The upside is more features, better data, and
    greatly improved performance in many cases.
  * initkan: Add '--locale' to retrieve locale-specific artist aliases when
    using '--call-musicbrainz'.  May not apply to all artists.
  * initkan: Argument '--parse-disc' now defaults off, as it was designed for
    a release title style that was deprecated at MusicBrainz long ago.  Still
    available for dealing with legacy data in local files.
  * initkan: Add '--track-artists' argument to support multi-value 'Artists' and
    'AritstsSort' tags for tracks.
  * initkan: Add '--ascii-punctuation' argument to support translation of
    non-ascii punction in titles (release title, track title, work title, etc.)
    with ascii equivalents.  Code borrowed from MusicBrainz picard.  Enabled by
    default.
  * initkan/showkan: No longer dump large blocks of data for embedded images.